--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<a class="navbar-brand mx-auto" href="index.php">GameZone</a>
+		<a class="navbar-brand mx-auto" href="index.html">GameZone</a>
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="index.php#inicio">Inicio</a>
+					<a class="nav-link" href="index.html#inicio">Inicio</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="index.php#about">Nosotros</a>
+					<a class="nav-link" href="index.html#about">Nosotros</a>
 				</li>
 
 				<li class="nav-item dropdown active">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 						data-toggle="dropdown" aria-haspopup="true">Productos</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="market_pcgaming.php">PC Gaming</a>
-						<a class="dropdown-item" href="market_consoles.php">Consolas</a>
-						<a class="dropdown-item" href="market_accesories.php">Accesorios</a>
+						<a class="dropdown-item" href="market_pcgaming.html">PC Gaming</a>
+						<a class="dropdown-item" href="market_consoles.html">Consolas</a>
+						<a class="dropdown-item" href="market_accesories.html">Accesorios</a>
 					</div>
 				</li>
 
 			</ul>
 		</div>
-		<a class="carrito" href="order.php" target="_blank">
+		<a class="carrito" href="order.html" target="_blank">
 			<svg width="4em" height="2em" viewBox="0 0 16 16" class="bi bi-bag" fill="white"
 				xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd"
@@ -121,7 +121,7 @@
 		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading"> Contamos con las mejores <a href="market_pcgaming.php"
+				<h2 class="featurette-heading"> Contamos con las mejores <a href="market_pcgaming.html"
 						target="_blank">PC Gaming</a> del mercado actual a los mejores precios </p>
 				</h2>
 				<p class="lead">Nuestras PC Gamer de catálogo son ensambles que hemos diseñado para cubrir diferentes
@@ -133,13 +133,13 @@
 			</div>
 			<div class="banner col-md-5">
 				<img src="media/img/bannerpc.jpg" alt="PC Gaming" class="imgbanner img-fluid">
-				<a class="btn btn-outline-light btn-lg" href="market_pcgaming.php" target="_blank">Ir a la tienda</a>
+				<a class="btn btn-outline-light btn-lg" href="market_pcgaming.html" target="_blank">Ir a la tienda</a>
 			</div>
 		</div>
 		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7 order-md-2">
-				<h2 class="featurette-heading">Conoce la nueva generación de <a href="market_consoles.php"
+				<h2 class="featurette-heading">Conoce la nueva generación de <a href="market_consoles.html"
 						target="_blank">consolas de videojuegos</a> </h2>
 				<p class="lead">¡Es el mejor momento para ser gamer!, no sólo porque la tecnología nos permite vivir
 					cada uno de nuestros juegos favoritos de manera más inmersiva, también porque tenemos la oportunidad
@@ -150,7 +150,7 @@
 			</div>
 			<div class="banner col-md-5 order-md-1">
 				<img src="media/img/bannerconsolas.jpg" alt="consolas" class="imgbanner img-fluid">
-				<a class="btn btn-outline-light btn-lg" href="market_consoles.php" target="_blank">Ir a la tienda</a>
+				<a class="btn btn-outline-light btn-lg" href="market_consoles.html" target="_blank">Ir a la tienda</a>
 			</div>
 		</div>
 
@@ -158,7 +158,7 @@
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Contamos con una seleccion de los mejores <a
-						href="market_accesories.php">accesorios para gaming </a> del mercado</h2>
+						href="market_accesories.html">accesorios para gaming </a> del mercado</h2>
 				<p class="lead">Encuentra variedad y calidad en nuestra seleccion de los mejores accesorios para gaming
 					que ofrece la indusytria de gadgets de primer nivel, contamos con los mejores teclados mecanicos
 					personalizables, tambien tenemos una seleccion de headsets de calidad y ratones gaming como los que
@@ -166,7 +166,7 @@
 			</div>
 			<div class="banner col-md-5">
 				<img src="media/img/banneraccesories.jpeg" alt="accesorios" class="imgbanner img-fluid">
-				<a class="btn btn-outline-light btn-lg" href="market_accesories.php target=" _blank">Ir a la tienda</a>
+				<a class="btn btn-outline-light btn-lg" href="market_accesories.html target="_blank">Ir a la tienda</a>
 			</div>
 		</div>
 	</section>
