adding Products class

--- a/market_pcgaming.html
+++ b/market_pcgaming.html
@@ -118,7 +118,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$1,500</h1>
-						<form action="scripts/cart.php" method="post">
+						<form action="scripts/cart.php" method="post" target="_blank">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
