fixing some shit

--- a/market_pcgaming.html
+++ b/market_pcgaming.html
@@ -167,6 +167,8 @@
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
 								</div>
+								<input hidden name="name" type="text" value="Delios 70i">
+								<input hidden name="price" type="number" value="1800">
 								<input class="input-group-addon" name="quantity" type="number" value="1" min="0" max="30">
 								<div class="input-group-append">
 									<button class="btn btn-outline-danger" type="submit">Añadir al
@@ -207,6 +209,8 @@
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
 								</div>
+								<input hidden name="name" type="text" value="Thanos 2080i">
+								<input hidden name="price" type="number" value="3500">
 								<input class="input-group-addon" type="number" value="1" min="0" max="30">
 								<div class="input-group-append">
 									<button class="btn btn-outline-danger" name="quantity" type="submit">Añadir al
