--- a/order.html
+++ b/order.html
@@ -107,14 +107,16 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="firstName">Nombre</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                                <input type="text" name="firstName" class="form-control" id="firstName" placeholder=""
+                                    value="" required>
                                 <div class="invalid-feedback">
                                     Valid first name is required.
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="lastName">Apellido</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                                <input type="text" name="lastName" class="form-control" id="lastName" placeholder=""
+                                    value="" required>
                                 <div class="invalid-feedback">
                                     Valid last name is required.
                                 </div>
@@ -122,7 +124,8 @@
                         </div>
                         <div class="mb-3">
                             <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                            <input type="email" name="email" class="form-control" id="email"
+                                placeholder="you@example.com">
                             <div class="invalid-feedback">
                                 Please enter a valid email address for shipping updates.
                             </div>
@@ -130,32 +133,30 @@
 
                         <div class="mb-3">
                             <label for="address">Direccion</label>
-                            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+                            <input type="text" name="addres" class="form-control" id="address"
+                                placeholder="1234 Main St" required>
                             <div class="invalid-feedback">
                                 Please enter your shipping address.
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <label for="address2">Direccion 2 <span class="text-muted">(Opcional)</span></label>
-                            <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                        </div>
+
                         <!--payment-->
                         <hr class="mb-4">
                         <h4 class="mb-3">Metodo de pago</h4>
 
                         <div class="d-block my-3">
                             <div class="custom-control custom-radio">
-                                <input id="credit" name="paymentMethod" type="radio" class="custom-control-input"
+                                <input id="credit" name="payment" type="radio" class="custom-control-input"
                                     checked required>
                                 <label class="custom-control-label" for="credit">Credit card</label>
                             </div>
                             <div class="custom-control custom-radio">
-                                <input id="debit" name="paymentMethod" type="radio" class="custom-control-input"
+                                <input id="debit" name="payment" type="radio" class="custom-control-input"
                                     required>
                                 <label class="custom-control-label" for="debit">Debit card</label>
                             </div>
                             <div class="custom-control custom-radio">
-                                <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input"
+                                <input id="paypal" name="payment" type="radio" class="custom-control-input"
                                     required>
                                 <label class="custom-control-label" for="paypal">PayPal</label>
                             </div>
