--- a/order.html
+++ b/order.html
@@ -102,7 +102,7 @@
                     </ul>
                 </div>
                 <div class="col-md-8 order-md-1">
-                    <form action="" method="post" class="needs-validation" novalidate>
+                    <form action="scripts/control.php" method="post" class="needs-validation" novalidate>
                         <h3 class="mb-3">Tus datos</h3>
                         <div class="row">
                             <div class="col-md-6 mb-3">
@@ -133,7 +133,7 @@
 
                         <div class="mb-3">
                             <label for="address">Direccion</label>
-                            <input type="text" name="addres" class="form-control" id="address"
+                            <input type="text" name="address" class="form-control" id="address"
                                 placeholder="1234 Main St" required>
                             <div class="invalid-feedback">
                                 Please enter your shipping address.
@@ -162,7 +162,7 @@
                             </div>
                         </div>
                         <hr class="mb-4">
-                        <button class="btn btn-primary btn-lg btn-block" type="submit">Pagar</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit" name="submit">Pagar</button>
                     </form>
                     <!--end of the form-->
                 </div>
