--- a/order.html
+++ b/order.html
@@ -26,9 +26,6 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/fixed.css">
-
-
-
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
@@ -102,7 +99,7 @@
                     </ul>
                 </div>
                 <div class="col-md-8 order-md-1">
-                    <form action="scripts/control.php" method="post" class="needs-validation" novalidate>
+                    <form action="crud/control.php" method="post" class="needs-validation" novalidate>
                         <h3 class="mb-3">Tus datos</h3>
                         <div class="row">
                             <div class="col-md-6 mb-3">
@@ -139,30 +136,8 @@
                                 Please enter your shipping address.
                             </div>
                         </div>
-
-                        <!--payment-->
                         <hr class="mb-4">
-                        <h4 class="mb-3">Metodo de pago</h4>
-
-                        <div class="d-block my-3">
-                            <div class="custom-control custom-radio">
-                                <input id="credit" name="payment" type="radio" class="custom-control-input"
-                                    checked required>
-                                <label class="custom-control-label" for="credit">Credit card</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                                <input id="debit" name="payment" type="radio" class="custom-control-input"
-                                    required>
-                                <label class="custom-control-label" for="debit">Debit card</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                                <input id="paypal" name="payment" type="radio" class="custom-control-input"
-                                    required>
-                                <label class="custom-control-label" for="paypal">PayPal</label>
-                            </div>
-                        </div>
-                        <hr class="mb-4">
-                        <button class="btn btn-primary btn-lg btn-block" type="submit" name="submit">Pagar</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit" name="pagar">Pagar</button>
                     </form>
                     <!--end of the form-->
                 </div>
