--- a/market_consoles.html
+++ b/market_consoles.html
@@ -68,7 +68,7 @@
 
 			</ul>
 		</div>
-		<a class="carrito" href="order.html" target="_blank">
+		<a class="carrito" href="order.php target="_blank">
 			<svg width="4em" height="2em" viewBox="0 0 16 16" class="bi bi-bag" fill="white"
 				xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd"
