--- a/market_pcgaming.html
+++ b/market_pcgaming.html
@@ -68,7 +68,7 @@
 
 			</ul>
 		</div>
-		<a class="carrito" href="order.html" target="_blank">
+		<a class="carrito" href="order.php" target="_blank">
 			<svg width="4em" height="2em" viewBox="0 0 16 16" class="bi bi-bag" fill="white"
 				xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd"
@@ -118,16 +118,17 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$1,500</h1>
-						<form action="scripts/cart.php" method="post" target="_blank">
+						<form action="crud/control.php" method="post" target="_blank">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
 								</div>
 								<input hidden name="name" type="text" value="Delios 60i">
 								<input hidden name="price" type="number" value="1500">
-								<input class="input-group-addon" name="quantity" type="number" value="1" min="0" max="30">
+								<input class="input-group-addon" name="quantity" type="number" value="1" min="0"
+									max="30">
 								<div class="input-group-append">
-									<button class="btn btn-outline-danger" type="submit">Añadir al
+									<button class="btn btn-outline-danger" type="submit" name="agregar">Añadir al
 										carrito</button>
 								</div>
 							</div>
@@ -162,16 +163,17 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$1,800</h1>
-						<form action="scripts/cart.php" method="post">
+						<form action="crud/control.php" method="post">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
 								</div>
 								<input hidden name="name" type="text" value="Delios 70i">
 								<input hidden name="price" type="number" value="1800">
-								<input class="input-group-addon" name="quantity" type="number" value="1" min="0" max="30">
+								<input class="input-group-addon" name="quantity" type="number" value="1" min="0"
+									max="30">
 								<div class="input-group-append">
-									<button class="btn btn-outline-danger" type="submit">Añadir al
+									<button class="btn btn-outline-danger" type="submit" name="agregar">Añadir al
 										carrito</button>
 								</div>
 							</div>
@@ -204,16 +206,16 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$3,500</h1>
-						<form action="scripts/cart.php" method="post">
+						<form action="crud/control.php" method="post">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
 								</div>
 								<input hidden name="name" type="text" value="Thanos 2080i">
 								<input hidden name="price" type="number" value="3500">
-								<input class="input-group-addon" type="number" value="1" min="0" max="30">
+								<input class="input-group-addon" type="number" value="1" min="0" max="30" name="quantity">
 								<div class="input-group-append">
-									<button class="btn btn-outline-danger" name="quantity" type="submit">Añadir al
+									<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
 										carrito</button>
 								</div>
 							</div>
